--- a/template/package.json
+++ b/template/package.json
@@ -36,7 +36,9 @@
     "postcss-salad": "^2.0.1",
     "sass-loader": "^6.0.6",
     "scss-loader": "~0.0.1",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "vue-baidu-map": "^0.20.3",
+    "swiper": "^3.4.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.0",
